<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="aktual">Pozycja aktualna w ułamkach stopni</string>
    <string name="szr">Szerokość: </string>
    <string name="dlg">Długość: </string>
    <string name="naguzik">Pokaż na mapie</string>
    <string name="poczekaj">Poczekaj około minuty na pomiar</string>

</resources>
